# security-sensei

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini
examples/vulnerable-ios/: Config.swift  Info.plist  Package.swift  VULNS.md
examples/vulnerable-node/: .env  VULNS.md  config.js  package.json  server.js
examples/vulnerable-python/: .env  VULNS.md  app.py  config.py  requirements.txt
sensei/: __init__.py  cli.py  demo.py
sensei/core/: __init__.py  baseline.py  finding.py  project.py  scanner.py
sensei/fixes/: __init__.py  auto_fix.py
sensei/rules/: __init__.py  code_patterns.json  npm_vulns.json  popular_packages.json  pypi_vulns.json  secrets.json
sensei/scanners/: __init__.py  base.py  code.py  config.py  dependencies.py  deployment.py  secrets.py  web.py
skill/: SKILL.md
tests/: __init__.py  conftest.py  test_finding.py  test_integration.py  test_project.py
tests/test_scanners/: test_code.py  test_config.py  test_dependencies.py  test_deployment.py  test_ios.py  test_secrets.py  test_web.py
