[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "security-sensei"
version = "0.1.0"
description = "A security scanner for code analysis"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "Security Sensei Team"}
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
sensei = "sensei.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["sensei*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
